# akari-bot

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommandGen.py  DEPLOY.md  DEPLOY_Docker.md  DEPOLY.md  Dockerfile  LICENSE  LOCALES.md  MessageGen.py  README.md  SECURITY.md  UTC8.py  blacklist.py  blacklist.txt  bot copy.py  bot.py  bot2.py  bug_cache_text.txt  case_test.py  checkuser.py  command.py  commandlist.py  console.py  crowdin.yml  findimage.py  help.py  init.py  launcher.py  legacy_subbot.py  main.py  mcvbot.py  mcversion.py  mcversion.txt  (+21 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1234.md  5678.md  91011.md  add_friends.yaml  add_new_group.yaml  add_petals.yaml  blocklist_appeal.yml  config.yml  external_link.yaml  feature_request.yaml  report_bug.yaml  request_add_petals.yaml  request_post_whitelist.yaml  request_wiki_whitelist.yaml
.github/ISSUE_TEMPLE/: config.yaml
.github/scripts/: build_copy_files.py  fetch_emojimix_data.py  pre_build.py
.github/workflows/: binary-build.yml  build-and-publish-docker.yml  build-release.yml  build.yml  codeql-analysis.yml  doc.yml  docker-build-and-publish.yml  docker-build.yml  generate-config.yml  main.yml  nightly-build.yml  publish-nightly.yml  publish-release.yml  run-builtin-tester.yaml  run-builtin-tester.yml  sync-ab-to-abc.yml  sync-webui.yml  update-emojimix-data.yml  update-poetry-dependencies.yml  update-poetry.yml  version.yml  webui-build.yml  weekly-release.yml
ab/: __init__.py  pbc.py
adapters/discord/: pyproject.toml
adapters/kook/: pyproject.toml
adapters/matrix/: pyproject.toml
adapters/onebot/: pyproject.toml
adapters/qqbot/: pyproject.toml
adapters/telegram/: pyproject.toml
adapters/web/: pyproject.toml
assets/: LICENSE  TarotData.json  bots_list.json  infoboxfix.css  mcnews.txt  mcversion_jira-bedrock.txt  mcversion_jira-dungeons.txt  mcversion_jira.txt  schedulers_list.json  unknown  version
assets/arcb30_assets_maker/: README.md  blur.py  copysong.py  crop.py
assets/cache/: 296b3cef-8801-430e-afd1-fe5b16d7cdcb
assets/color/: material_colors.json
assets/emojimix/: emoji_data.json
assets/fonts/: LICENSE
assets/inflaction/: consumer_price_index.csv
assets/maimai/: grade_info.json  mai_grade_info.json
assets/modules/: emojimixLICENSE
assets/tarot/: tarot_cards.json
assets/templates/: help_doc.html  help_doc_detail.html  module_list.html  msgchain_to_image.html  svg_template.html
assets/threedsdb/: list_TW.json
backup/arcaea/: __init__.py  drawb30img.py  getb30.py
backup/broadcast/: __init__.py
backup/core/: alias.py  prefix.py
backup/cytoid/: orm.py  rating.py  utils.py
backup/github/: search.py
backup/hitokoto/: __init__.py
backup/idlist/: __init__.py
backup/info/: info.py
backup/maimai/: LICENCE
backup/mcbbs_news/: mcbbs_news.py
backup/mcv/: __init__.py
backup/mcv_rss/: __init__.py
backup/minecraft_news/: __init__.py
backup/nintendo_err/: wiiu_support.py
backup/notice/: __init__.py
backup/random/: __init__.py
backup/server/: server.py
backup/user/: __init__.py
backup/wiki/: __init__.py  audit.py  inline.py
bots/aiocqhttp/: bot.py  client.py  config.py  context.py  features.py  info.py  message.py  message_guild.py  tasks.py  utils.py
bots/aiogram/: bot.py  client.py  config.py  context.py  features.py  info.py  message.py  tasks.py
bots/api/: bot.py  info.py
bots/discord/: bot.py  client.py  config.py  context.py  features.py  info.py  message.py  slash_context.py  slash_message.py  slash_parser.py  utils.py
bots/kook/: bot.py  client.py  config.py  context.py  features.py  info.py  message.py
bots/lagrange/: bot.py  info.py  (+3 more)
bug/: __init__.py  bugtracker.py  bugtrackerbc.py  bugtrackergc.py  debug.py
config/: __init__.py  config.cfg  config.cfg.example  config.toml.example  config.toml.zh_cn.example
core/: __init__.py  alive.py  background_tasks.py  bot.py  bot_init.py  broadcast.py  client.py  close.py  component.py  config.py  config_webrender.py  cooldown.py  decorator.py  dirty_check.py  elements.py  exceptions.py  exports.py  game.py  i18n.py  ip.py  joke.py  loader.py  loader_old.py  logger.py  loop.py  parser.py  path.py  petal.py  queue.py  queue_.py  rate_limit.py  scheduler.py  secret_check.py  server.py  template.py  template.pyi  terminate.py  tos.py  utils.py  web_render.py
database/: __init__.py  local.py  logging_message.py  old.db  orm.py  save.db-shm  save.db-wal  tables.py  update.py  update_v3_to_v4.py  updatedatabase.py  utils.py
database_new/: orm.py  tables.py
docs/: DEPLOY.md  DEPLOY_Docker.md  LOCALES.md
example/: help_doc_test.py
garbage/: wikisearch.py
interwikilist/: __init__.py  list.cfg
joke/: __init__.py  modules.py  su_utils.py
locales/: LOCALES.md  en_us.json  zh_cn.json  zh_tw.json
mcbv/: __init__.py  test.py
mcdv/: __init__.py  test.py
mcv/: __init__.py
modules/: README.MD  UTC8.py  camr.py  checkuser.py  credits.py  dfile.py  findimage.py  get.py  help.py  mcbv.py  mcdv.py  mcv.py  mcversion.py  mcvrss.py  nintendoerr.py  pathexist.py  pbc.py  ping.py
newbee/: __init__.py
newbie/: __init__.py  pbc.py  test.py
plugins/: checkuser.py  help.py  mcvrss.py
rc/: UTC8A.py  __init__.py  pbc.py
schedulers/: init.py  maimai_alias.py  mc_crowdin.py  mcv_rss.py  minecraft_news.py  purge.py  weekly_rss.py  wiki_bot.py  wiki_rss.py  wikilog.py
scripts/: fetch_emojimix_data.py
server/: __init__.py  be.py  server.py  serverraw.py
test-results/: junit_test.xml
tests/: capture_http_fixtures.py  test_example.py
user/: __init__.py  gender.py  ruserlib.py  tool.py  user.py  userlib.py  yhz.py
userp/: UTC8U.py  UTC8V.py  __init__.py  checkuser.py  dpng.py  gender.py  hh.py  hh17.py  killdd.py  pathexist.py  pathexist2.py  puserlib.py  puserlibban.py  tpg.py  tpgban.py  tpgbann.py
webui/: README.md  index.html
wiki/: __init__.py  wikilib.py  wikitextlib.py
wikil/: __init__.py  wikitextlib.py
wikim/: __init__.py  m.py  wikilib.py
(+1942 files in other folders)
