[project]
name = "akari-bot"
version = "0.1.0"
description = ""
authors = [
    { name = "OasisAkari", email = "oasisakari@gmail.com" },
    { name = "Dianliang233", email = "me@dian.fyi" },
    { name = "DoroWolf", email = "dorowolf314@gmail.com" },
    { name = "nullcat", email = "null@teahou.se" },
    { name = "_LittleC_", email = "i@ltlec.com" },
    { name = "cloudw233", email = "cloudw233@outlook.com" },
]
license = "AGPL-3.0"
license-files = ["LICENSE", "**/LICENSE"]
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
dependencies = [
    # akari-bot-service
    "akari-bot-webrender==0.5.13",
    "akari-bot-webui==0.3.7",

    # lib
    "coverage>=7.9.1,<8.0.0",
    "cryptography>=46.0.0,<47.0.0",
    "deprecated>=1.2.18,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pycryptodome>=3.18.0,<4.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "pywin32>=308,<309; platform_system == 'Windows'",

    # bots
    "aiocqhttp>=1.4.3,<2.0.0",
    "aiogram>=3.4.1,<4.0.0",
    "argon2-cffi>=25.0.0,<26.0.0",
    "fastapi>=0.120.0,<1.0.0",
    "ffmpy>=1.0.0,<2.0.0",
    "khl-py>=0.3.16,<1.0.0",
    "matrix-nio>=0.25.0,<1.0.0",
    "py-cord @ git+https://github.com/Pycord-Development/pycord",
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "qq-botpy>=1.2.1,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "uvicorn[standard]>=0.38.0,<1.0.0",

    # core
    "cattrs>=25.0.0,<26.0.0",
    "filetype>=1.2.0,<2.0.0",
    "japanera>=2.1.3,<3.0.0",
    "orjson>=3.10.9,<4.0.0",
    "Pillow>=12.0.0,<13.0.0",
    "tenacity>=9.0.0,<10.0.0",

    # core.config
    "tomlkit>=0.14.0,<1.0.0",

    # core.database
    "tortoise-orm[asyncmy]>=1.1.2,<1.2.0",

    # core.http
    "aiofile>=3.8.1,<4.0.0",
    "attrs>=25.0.0,<26.0.0",
    "httpx>=0.28.1,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",

    # core.logger
    "loguru>=0.7.0,<1.0.0",


    # core.utils
    "ff3>=1.0.2,<2.0.0",
    "psutil>=7.0.0,<8.0.0",
    "tabulate>=0.9.0,<1.0.0",


    # core.scheduler
    "APScheduler>=3.9.1-post.0,<4.0.0.0",

    # modules.core
    "matplotlib>=3.6.3,<4.0.0",
    "py-cpuinfo>=9.0.0,<10.0.0",

    # modules
    "beautifulsoup4>=4.11.1,<5.0.0",
    "emoji>=2.12.1,<3.0.0",
    "feedparser>=6.0.10,<7.0.0",
    "google-play-scraper>=1.2.2,<2.0.0",
    "gql>=4.0.0,<5.0.0",
    "langconv @ git+https://github.com/Teahouse-Studios/langconv.py.git",
    "mcstatus>=12.0.0,<13.0.0",
    "numpy<2.4.3",
    "openai>=2.0.0,<3.0.0",
    "pandas>=3.0.0,<4.0.0",
    "pint>=0.25.0,<1.0.0",
    "python-whois>=0.9.0,<1.0.0",
    "rdkit>=2025.0.0,<2026.0.0",
    "simpleeval>=1.0.0,<2.0.0",
    "webcolors>=25.0.0,<26.0.0",
    "wolframalpha>=5.0.0,<6.0.0",
]

[dependency-groups]
dev = ["ruff>=0.15.1"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F405", "F403", "E741", "E721"]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pyright]
reportUndefinedVariable = "error"
