[project]
name = "akari-bot"
version = "0.1.0"
description = ""
authors = [
    { name = "OasisAkari", email = "oasisakari@gmail.com" },
    { name = "Dianliang233", email = "me@dian.fyi" },
    { name = "DoroWolf", email = "dorowolf314@gmail.com" },
    { name = "nullcat", email = "null@teahou.se" },
    { name = "_LittleC_", email = "i@ltlec.com" },
    { name = "cloudw233", email = "cloudw233@outlook.com" },
]
license = "AGPL-3.0"
license-files = ["LICENSE", "**/LICENSE"]
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
dependencies = [
    # akari-bot-service
    "akari-bot-webrender==0.5.13",
    "akari-bot-webui==0.3.10",
    "akari-bot-plugin-core",
    # lib
    "coverage>=7.9.1,<8.0.0",
    "cryptography>=46.0.0,<47.0.0",
    "deprecated>=1.2.18,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pycryptodome>=3.18.0,<4.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "pywin32>=311,<312; platform_system == 'Windows'",
    # core
    "cattrs>=26.1.0,<26.2.0",
    "filetype>=1.2.0,<2.0.0",
    "japanera>=2.1.3,<3.0.0",
    "orjson>=3.10.9,<4.0.0",
    "Pillow>=12.0.0,<13.0.0",
    "tenacity>=9.0.0,<10.0.0",
    # core.config
    "tomlkit>=0.14.0,<1.0.0",
    # core.database
    "tortoise-orm[asyncmy]>=1.1.2,<1.2.0",
    # core.http
    "aiofile>=3.8.1,<4.0.0",
    "attrs>=25.0.0,<26.0.0",
    "httpx>=0.28.1,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    # core.logger
    "loguru>=0.7.0,<1.0.0",
    # core.tester
    "defusedxml>=0.7.1",
    # core.utils
    "ff3>=1.0.2,<2.0.0",
    "psutil>=7.0.0,<8.0.0",
    "tabulate>=0.9.0,<1.0.0",
    # core.scheduler
    "APScheduler>=3.9.1-post.0,<4.0.0.0",
    # uncategorized
]

[project.optional-dependencies]
all-plugins = [
    # adapers
    "akari-bot-adapter-discord",
    "akari-bot-adapter-kook",
    "akari-bot-adapter-matrix",
    "akari-bot-adapter-onebot",
    "akari-bot-adapter-qqbot",
    "akari-bot-adapter-telegram",
    "akari-bot-adapter-web",
    # plugins
    "akari-bot-plugin-ai",
    "akari-bot-plugin-chemical-code",
    "akari-bot-plugin-color",
    "akari-bot-plugin-convert",
    "akari-bot-plugin-cytoid",
    "akari-bot-plugin-dice",
    "akari-bot-plugin-emojimix",
    "akari-bot-plugin-hitokoto",
    "akari-bot-plugin-langconv",
    "akari-bot-plugin-maimai",
    "akari-bot-plugin-mcmod",
    "akari-bot-plugin-mcserver",
    "akari-bot-plugin-mcv",
    "akari-bot-plugin-mcv-rss",
    "akari-bot-plugin-twenty-four",
    "akari-bot-plugin-weekly",
    "akari-bot-plugin-whois",
    "akari-bot-plugin-wiki",
    "akari-bot-plugin-wolframalpha",
]

[project.urls]
Homepage = "https://github.com/Teahouse-Studios/akari-bot"
Issues = "https://github.com/Teahouse-Studios/akari-bot/issues"

[dependency-groups]
dev = ["ruff>=0.15.1"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F405", "F403", "E741", "E721"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
reportUndefinedVariable = "error"

[tool.uv.sources]
akari-bot-adapter-discord = { workspace = true, editable = true }
akari-bot-adapter-kook = { workspace = true, editable = true }
akari-bot-adapter-matrix = { workspace = true, editable = true }
akari-bot-adapter-onebot = { workspace = true, editable = true }
akari-bot-adapter-qqbot = { workspace = true, editable = true }
akari-bot-adapter-telegram = { workspace = true, editable = true }
akari-bot-adapter-web = { workspace = true, editable = true }
akari-bot-plugin-ai = { workspace = true, editable = true }
akari-bot-plugin-chemical-code = { workspace = true, editable = true }
akari-bot-plugin-color = { workspace = true, editable = true }
akari-bot-plugin-convert = { workspace = true, editable = true }
akari-bot-plugin-core = { workspace = true, editable = true }
akari-bot-plugin-cytoid = { workspace = true, editable = true }
akari-bot-plugin-dice = { workspace = true, editable = true }
akari-bot-plugin-emojimix = { workspace = true, editable = true }
akari-bot-plugin-hitokoto = { workspace = true, editable = true }
akari-bot-plugin-langconv = { workspace = true, editable = true }
akari-bot-plugin-maimai = { workspace = true, editable = true }
akari-bot-plugin-mcmod = { workspace = true, editable = true }
akari-bot-plugin-mcserver = { workspace = true, editable = true }
akari-bot-plugin-mcv = { workspace = true, editable = true }
akari-bot-plugin-mcv-rss = { workspace = true, editable = true }
akari-bot-plugin-twenty-four = { workspace = true, editable = true }
akari-bot-plugin-weekly = { workspace = true, editable = true }
akari-bot-plugin-whois = { workspace = true, editable = true }
akari-bot-plugin-wiki = { workspace = true, editable = true }
akari-bot-plugin-wolframalpha = { workspace = true, editable = true }

[tool.uv.workspace]
members = ["adapters/*", "plugins/*"]
